--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:54:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:55:02 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -153,7 +153,23 @@ body {
       <td class="greyout leftborder">Tyrrell Hatton -1
 -1 thru 2</td>
       <td class="greyout">Viktor Hovland(W) E
+E thru 1</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith -3
+-3 thru 12</td>
+      <td>Scottie Scheffler(W) -2
+-2 thru 10</td>
+      <td>Billy Horschel -2
+-2 thru 2</td>
+      <td>Patrick Cantlay E
+E thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
+      <td class="greyout">Xander Schauffele E
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">BCREAMED</td>
@@ -168,8 +184,8 @@ Not started</td>
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 11</td>
+      <td class="greyout">Louis Oosthuizen +5
++5 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
@@ -177,7 +193,7 @@ Not started</td>
       <td>Cameron Smith -3
 -3 thru 12</td>
       <td>Joaquin Niemann -2
--2 thru 11</td>
+-2 thru 12</td>
       <td>Sam Burns -1
 -1 thru 2</td>
       <td>Jon Rahm(W) E
@@ -185,7 +201,7 @@ E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Xander Schauffele E
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Luke Watson</td>
@@ -201,23 +217,7 @@ E thru 14</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Xander Schauffele E
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -3
--3 thru 12</td>
-      <td>Scottie Scheffler(W) -2
--2 thru 10</td>
-      <td>Billy Horschel -1
--1 thru 1</td>
-      <td>Patrick Cantlay E
 E thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka E
-Not started</td>
-      <td class="greyout">Xander Schauffele E
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -245,9 +245,9 @@ E thru 1</td>
       <td>Corey Conners -1
 -1 thru 6</td>
       <td>Xander Schauffele(W) E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Will Zalatoris E
 E thru 1</td>
     </tr>
@@ -263,9 +263,9 @@ E thru 1</td>
       <td>Jon Rahm(W) E
 E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Tiger Woods E
-E thru 11</td>
+E thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -277,7 +277,7 @@ E thru 11</td>
       <td>Hideki Matsuyama E
 E thru 10</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Will Zalatoris E
@@ -293,11 +293,27 @@ E thru 1</td>
       <td>Patrick Cantlay E
 E thru 1</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Shane Lowry E
 E thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Tom Davis</td>
+      <td class="bigbold">-5</td>
+      <td>Cameron Smith -3
+-3 thru 12</td>
+      <td>Dustin Johnson(W) -1
+-1 thru 2</td>
+      <td>Corey Conners -1
+-1 thru 6</td>
+      <td>Patrick Cantlay E
+E thru 1</td>
+      <td class="greyout leftborder">Shane Lowry E
+E thru 13</td>
+      <td class="greyout">Louis Oosthuizen +5
++5 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -313,7 +329,7 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Xander Schauffele E
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -327,7 +343,7 @@ Not started</td>
       <td>Jon Rahm(W) E
 E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Will Zalatoris E
 E thru 1</td>
     </tr>
@@ -343,7 +359,7 @@ E thru 1</td>
       <td>Patrick Cantlay E
 E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Will Zalatoris E
 E thru 1</td>
     </tr>
@@ -391,7 +407,7 @@ Not started</td>
       <td>Patrick Cantlay(W) E
 E thru 1</td>
       <td class="greyout leftborder">Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Jon Rahm E
 E thru 1</td>
     </tr>
@@ -403,9 +419,9 @@ E thru 1</td>
       <td>Corey Conners -1
 -1 thru 6</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Justin Thomas +2
@@ -437,7 +453,7 @@ E thru 1</td>
       <td>Hideki Matsuyama E
 E thru 10</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Marc Leishman +1
 +1 thru 4</td>
       <td class="greyout">Justin Thomas +2
@@ -451,7 +467,7 @@ Not started</td>
       <td>Corey Conners -1
 -1 thru 6</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Shane Lowry E
 E thru 13</td>
       <td class="greyout leftborder">Hideki Matsuyama E
@@ -469,7 +485,7 @@ E thru 1</td>
       <td>Rory McIlroy E
 Not started</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 +2 thru 10</td>
       <td class="greyout">Justin Rose +2
@@ -492,26 +508,10 @@ Not started</td>
 E thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -3
--3 thru 12</td>
-      <td>Corey Conners -1
--1 thru 6</td>
-      <td>Dustin Johnson(W) E
-E thru 1</td>
-      <td>Patrick Cantlay E
-E thru 1</td>
-      <td class="greyout leftborder">Shane Lowry E
-E thru 13</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 11</td>
-    </tr>
-    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-4</td>
       <td>Joaquin Niemann -2
--2 thru 11</td>
+-2 thru 12</td>
       <td>Sam Burns -1
 -1 thru 2</td>
       <td>Corey Conners -1
@@ -519,9 +519,25 @@ E thru 13</td>
       <td>Shane Lowry(W) E
 E thru 13</td>
       <td class="greyout leftborder">Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Brian Harman +1
 +1 thru 17</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -2
+-2 thru 10</td>
+      <td>Dustin Johnson -1
+-1 thru 2</td>
+      <td>Brooks Koepka(W) E
+Not started</td>
+      <td>Patrick Cantlay E
+E thru 1</td>
+      <td class="greyout leftborder">Xander Schauffele E
+E thru 1</td>
+      <td class="greyout">Adam Scott +1
++1 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -533,7 +549,7 @@ Not started</td>
       <td>Jon Rahm E
 E thru 1</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Will Zalatoris E
@@ -549,7 +565,7 @@ E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Will Zalatoris E
 E thru 1</td>
       <td class="greyout">Justin Thomas(W) +2
@@ -579,7 +595,7 @@ E thru 1</td>
       <td>Jon Rahm(W) E
 E thru 1</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy E
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
@@ -611,7 +627,7 @@ Not started</td>
       <td>Patrick Cantlay E
 E thru 1</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td class="greyout leftborder">Shane Lowry E
@@ -645,9 +661,9 @@ Not started</td>
       <td>Hideki Matsuyama E
 E thru 10</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Tiger Woods E
-E thru 11</td>
+E thru 12</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 10</td>
     </tr>
@@ -659,11 +675,11 @@ E thru 11</td>
       <td>Patrick Cantlay E
 E thru 1</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy E
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 10</td>
     </tr>
@@ -684,22 +700,6 @@ E thru 1</td>
 +2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -2
--2 thru 10</td>
-      <td>Brooks Koepka(W) E
-Not started</td>
-      <td>Patrick Cantlay E
-E thru 1</td>
-      <td>Dustin Johnson E
-E thru 1</td>
-      <td class="greyout leftborder">Xander Schauffele E
-Not started</td>
-      <td class="greyout">Adam Scott +1
-+1 thru 10</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-2</td>
       <td>Daniel Berger -2
@@ -707,11 +707,11 @@ Not started</td>
       <td>Patrick Cantlay E
 E thru 1</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm E
 E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas(W) +2
 +2 thru 10</td>
     </tr>
@@ -725,7 +725,7 @@ E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Justin Thomas(W) +2
@@ -739,11 +739,11 @@ Not started</td>
       <td>Jon Rahm(W) E
 E thru 1</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Jordan Spieth E
 Not started</td>
     </tr>
@@ -755,13 +755,13 @@ Not started</td>
       <td>Jon Rahm(W) E
 E thru 1</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td class="greyout leftborder">Rory McIlroy E
 Not started</td>
       <td class="greyout">Xander Schauffele E
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
@@ -771,13 +771,29 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td>Will Zalatoris E
 E thru 1</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 +2 thru 10</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 11</td>
+      <td class="greyout">Louis Oosthuizen +5
++5 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">-1</td>
+      <td>Dustin Johnson -1
+-1 thru 2</td>
+      <td>Rory McIlroy(W) E
+Not started</td>
+      <td>Patrick Cantlay E
+E thru 1</td>
+      <td>Viktor Hovland E
+E thru 1</td>
+      <td class="greyout leftborder">Jon Rahm E
+E thru 1</td>
+      <td class="greyout">Jordan Spieth E
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -785,7 +801,7 @@ E thru 1</td>
       <td>Sam Burns -1
 -1 thru 2</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm E
 E thru 1</td>
       <td>Jordan Spieth E
@@ -801,9 +817,9 @@ E thru 1</td>
       <td>Corey Conners -1
 -1 thru 6</td>
       <td>Xander Schauffele(W) E
-Not started</td>
+E thru 1</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy E
 Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
@@ -821,7 +837,7 @@ E thru 1</td>
       <td>Rory McIlroy E
 Not started</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Justin Thomas +2
@@ -844,36 +860,52 @@ E thru 1</td>
 +2 thru 10</td>
     </tr>
     <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">-1</td>
+      <td>Dustin Johnson(W) -1
+-1 thru 2</td>
+      <td>Tony Finau E
+E thru 10</td>
+      <td>Matthew Fitzpatrick E
+Not started</td>
+      <td>Shane Lowry E
+E thru 13</td>
+      <td class="greyout leftborder">Jordan Spieth E
+Not started</td>
+      <td class="greyout">Louis Oosthuizen +5
++5 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-1</td>
+      <td>Dustin Johnson -1
+-1 thru 2</td>
+      <td>Jordan Spieth(W) E
+Not started</td>
+      <td>Patrick Cantlay E
+E thru 1</td>
+      <td>Viktor Hovland E
+E thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka E
+Not started</td>
+      <td class="greyout">Jon Rahm E
+E thru 1</td>
+    </tr>
+    <tr>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">0</td>
       <td>Viktor Hovland(W) E
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay E
 E thru 1</td>
       <td>Jon Rahm E
 E thru 1</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Will Zalatoris E
 E thru 1</td>
       <td class="greyout">Collin Morikawa +1
 +1 thru 2</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">0</td>
-      <td>Rory McIlroy(W) E
-Not started</td>
-      <td>Patrick Cantlay E
-E thru 1</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Dustin Johnson E
-E thru 1</td>
-      <td class="greyout leftborder">Jon Rahm E
-E thru 1</td>
-      <td class="greyout">Jordan Spieth E
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Tony Muir</td>
@@ -881,27 +913,27 @@ Not started</td>
       <td>Jon Rahm(W) E
 E thru 1</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Justin Thomas +2
 +2 thru 10</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 11</td>
+      <td class="greyout">Louis Oosthuizen +5
++5 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Yellow in Augusta</td>
       <td class="bigbold">0</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Jon Rahm E
 E thru 1</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Justin Thomas(W) +2
@@ -931,7 +963,7 @@ E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td>Jordan Spieth E
 Not started</td>
       <td class="greyout leftborder">Collin Morikawa +1
@@ -943,7 +975,7 @@ Not started</td>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">0</td>
       <td>Viktor Hovland(W) E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Jon Rahm E
@@ -953,7 +985,7 @@ Not started</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 2</td>
       <td class="greyout">Patrick Reed +1
-+1 thru 5</td>
++1 thru 6</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -975,9 +1007,9 @@ Not started</td>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">0</td>
       <td>Tiger Woods(W) E
-E thru 11</td>
+E thru 12</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy E
 Not started</td>
       <td>Will Zalatoris E
@@ -991,17 +1023,17 @@ E thru 1</td>
       <td class="bigbold">Bryan Francis</td>
       <td class="bigbold">0</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm E
 E thru 1</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td>Jordan Spieth E
 Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 +2 thru 10</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 11</td>
+      <td class="greyout">Louis Oosthuizen +5
++5 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Kash Ahmad</td>
@@ -1009,7 +1041,7 @@ Not started</td>
       <td>Jon Rahm(W) E
 E thru 1</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Jordan Spieth E
@@ -1031,51 +1063,19 @@ Not started</td>
       <td>Jon Rahm E
 E thru 1</td>
       <td class="greyout leftborder">Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas +2
 +2 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">0</td>
-      <td>Dustin Johnson(W) E
-E thru 1</td>
-      <td>Tony Finau E
-E thru 10</td>
-      <td>Matthew Fitzpatrick E
-Not started</td>
-      <td>Shane Lowry E
-E thru 13</td>
-      <td class="greyout leftborder">Jordan Spieth E
-Not started</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">0</td>
-      <td>Jordan Spieth(W) E
-Not started</td>
-      <td>Patrick Cantlay E
-E thru 1</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Dustin Johnson E
-E thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka E
-Not started</td>
-      <td class="greyout">Jon Rahm E
-E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
       <td class="bigbold">1</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy E
 Not started</td>
       <td>Tiger Woods E
-E thru 11</td>
+E thru 12</td>
       <td>Collin Morikawa(W) +1
 +1 thru 2</td>
       <td class="greyout leftborder">Justin Thomas +2
