--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:54:08 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:55:02 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -151,7 +151,7 @@ body {
       <td>Corey Conners -1
 -1 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Jordan Spieth E
 Not started</td>
     </tr>
@@ -161,15 +161,15 @@ Not started</td>
       <td>Cameron Smith -3
 -3 thru 12</td>
       <td>Joaquin Niemann -2
--2 thru 11</td>
+-2 thru 12</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy E
 Not started</td>
       <td class="greyout leftborder">Justin Thomas +2
 +2 thru 10</td>
-      <td class="greyout">Tommy Fleetwood(W) +5
-+5 thru 12</td>
+      <td class="greyout">Tommy Fleetwood(W) +4
++4 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -195,9 +195,9 @@ Not started</td>
       <td>Corey Conners -1
 -1 thru 6</td>
       <td>Viktor Hovland E
-Not started</td>
+E thru 1</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Justin Thomas +2
@@ -209,7 +209,7 @@ Not started</td>
       <td>Sungjae Im -3
 -3 thru 4</td>
       <td>Viktor Hovland(W) E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Patrick Cantlay E
@@ -227,7 +227,7 @@ E thru 1</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td>Rory McIlroy E
 Not started</td>
       <td class="greyout leftborder">Patrick Cantlay E
@@ -316,6 +316,22 @@ E thru 10</td>
 +2 thru 10</td>
     </tr>
     <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">-1</td>
+      <td>Dustin Johnson -1
+-1 thru 2</td>
+      <td>Corey Conners -1
+-1 thru 6</td>
+      <td>Xander Schauffele(W) E
+E thru 1</td>
+      <td>Russell Henley +1
++1 thru 6</td>
+      <td class="greyout leftborder">Justin Thomas +2
++2 thru 10</td>
+      <td class="greyout">Louis Oosthuizen +5
++5 thru 12</td>
+    </tr>
+    <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
@@ -323,29 +339,29 @@ E thru 10</td>
       <td>Jon Rahm E
 E thru 1</td>
       <td>Xander Schauffele E
-Not started</td>
+E thru 1</td>
       <td>Jordan Spieth E
 Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
 +2 thru 10</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 11</td>
+      <td class="greyout">Louis Oosthuizen +5
++5 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners -1
--1 thru 6</td>
-      <td>Xander Schauffele(W) E
+      <td class="bigbold">Matt Tummon</td>
+      <td class="bigbold">-1</td>
+      <td>Dustin Johnson -1
+-1 thru 2</td>
+      <td>Jordan Spieth(W) E
 Not started</td>
-      <td>Dustin Johnson E
+      <td>Patrick Cantlay E
 E thru 1</td>
-      <td>Russell Henley +1
-+1 thru 6</td>
-      <td class="greyout leftborder">Justin Thomas +2
-+2 thru 10</td>
-      <td class="greyout">Louis Oosthuizen +3
-+3 thru 11</td>
+      <td>Viktor Hovland E
+E thru 1</td>
+      <td class="greyout leftborder">Brooks Koepka E
+Not started</td>
+      <td class="greyout">Jon Rahm E
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon-Not Paid</td>
@@ -364,26 +380,10 @@ E thru 10</td>
 +1 thru 2</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">0</td>
-      <td>Jordan Spieth(W) E
-Not started</td>
-      <td>Patrick Cantlay E
-E thru 1</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Dustin Johnson E
-E thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka E
-Not started</td>
-      <td class="greyout">Jon Rahm E
-E thru 1</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jeff Turnham</td>
       <td class="bigbold">1</td>
       <td>Viktor Hovland(W) E
-Not started</td>
+E thru 1</td>
       <td>Jon Rahm E
 E thru 1</td>
       <td>Brooks Koepka E
@@ -391,7 +391,7 @@ Not started</td>
       <td>Collin Morikawa +1
 +1 thru 2</td>
       <td class="greyout leftborder">Patrick Reed +1
-+1 thru 5</td>
++1 thru 6</td>
       <td class="greyout">Luke List +2
 +2 thru 15</td>
     </tr>
