--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:59:33 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:00:28 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,13 +147,13 @@ body {
       <td>Scottie Scheffler(W) -2
 -2 thru 10</td>
       <td>Sam Burns -1
--1 thru 2</td>
+-1 thru 3</td>
       <td>Corey Conners -1
 -1 thru 6</td>
       <td class="greyout leftborder">Xander Schauffele E
 E thru 1</td>
       <td class="greyout">Jordan Spieth E
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
@@ -167,9 +167,25 @@ E thru 1</td>
       <td>Rory McIlroy E
 Not started</td>
       <td class="greyout leftborder">Justin Thomas +2
-+2 thru 10</td>
++2 thru 11</td>
       <td class="greyout">Tommy Fleetwood(W) +4
 +4 thru 13</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -3
+-3 thru 12</td>
+      <td>Shane Lowry -1
+-1 thru 14</td>
+      <td>Matthew Fitzpatrick E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td class="greyout leftborder">Will Zalatoris E
+E thru 1</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
@@ -179,11 +195,11 @@ Not started</td>
       <td>Corey Conners(W) -1
 -1 thru 6</td>
       <td>Robert MacIntyre -1
--1 thru 7</td>
+-1 thru 8</td>
       <td>Jon Rahm E
 E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Collin Morikawa +1
 +1 thru 2</td>
     </tr>
@@ -199,9 +215,25 @@ E thru 1</td>
       <td>Xander Schauffele E
 E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth E
-Not started</td>
+E thru 1</td>
       <td class="greyout">Justin Thomas +2
-+2 thru 10</td>
++2 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-3</td>
+      <td>Tyrrell Hatton -1
+-1 thru 3</td>
+      <td>Corey Conners -1
+-1 thru 6</td>
+      <td>Shane Lowry -1
+-1 thru 14</td>
+      <td>Jon Rahm E
+E thru 1</td>
+      <td class="greyout leftborder">Patrick Cantlay E
+E thru 1</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -217,7 +249,39 @@ E thru 1</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 2</td>
       <td class="greyout">Justin Thomas +2
-+2 thru 10</td>
++2 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -2
+-2 thru 10</td>
+      <td>Shane Lowry -1
+-1 thru 14</td>
+      <td>Patrick Cantlay E
+E thru 1</td>
+      <td>Will Zalatoris E
+E thru 1</td>
+      <td class="greyout leftborder">Tony Finau E
+E thru 10</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 11</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler(W) -2
+-2 thru 10</td>
+      <td>Shane Lowry -1
+-1 thru 14</td>
+      <td>Jon Rahm E
+E thru 1</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td class="greyout leftborder">Jordan Spieth E
+E thru 1</td>
+      <td class="greyout">Will Zalatoris E
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -236,70 +300,6 @@ E thru 1</td>
 +1 thru 2</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -3
--3 thru 12</td>
-      <td>Matthew Fitzpatrick E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Shane Lowry E
-E thru 13</td>
-      <td class="greyout leftborder">Will Zalatoris E
-E thru 1</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-2</td>
-      <td>Tyrrell Hatton -1
--1 thru 2</td>
-      <td>Corey Conners -1
--1 thru 6</td>
-      <td>Jon Rahm E
-E thru 1</td>
-      <td>Patrick Cantlay E
-E thru 1</td>
-      <td class="greyout leftborder">Shane Lowry E
-E thru 13</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -2
--2 thru 10</td>
-      <td>Patrick Cantlay E
-E thru 1</td>
-      <td>Will Zalatoris E
-E thru 1</td>
-      <td>Tony Finau E
-E thru 10</td>
-      <td class="greyout leftborder">Shane Lowry E
-E thru 13</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler(W) -2
--2 thru 10</td>
-      <td>Jon Rahm E
-E thru 1</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Jordan Spieth E
-Not started</td>
-      <td class="greyout leftborder">Will Zalatoris E
-E thru 1</td>
-      <td class="greyout">Shane Lowry E
-E thru 13</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">-2</td>
       <td>Daniel Berger -2
@@ -313,7 +313,7 @@ E thru 10</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 2</td>
       <td class="greyout">Justin Thomas(W) +2
-+2 thru 10</td>
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -327,7 +327,7 @@ E thru 1</td>
       <td>Russell Henley +1
 +1 thru 6</td>
       <td class="greyout leftborder">Justin Thomas +2
-+2 thru 10</td>
++2 thru 11</td>
       <td class="greyout">Louis Oosthuizen +5
 +5 thru 12</td>
     </tr>
@@ -341,9 +341,9 @@ E thru 1</td>
       <td>Xander Schauffele E
 E thru 1</td>
       <td>Jordan Spieth E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Justin Thomas(W) +2
-+2 thru 10</td>
++2 thru 11</td>
       <td class="greyout">Louis Oosthuizen +5
 +5 thru 12</td>
     </tr>
@@ -353,7 +353,7 @@ Not started</td>
       <td>Dustin Johnson -1
 -1 thru 2</td>
       <td>Jordan Spieth(W) E
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay E
 E thru 1</td>
       <td>Viktor Hovland E
@@ -369,7 +369,7 @@ E thru 1</td>
       <td>Jon Rahm(W) E
 E thru 1</td>
       <td>Jordan Spieth E
-Not started</td>
+E thru 1</td>
       <td>Patrick Cantlay E
 E thru 1</td>
       <td>Brooks Koepka E
