--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:06:45 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 3:07:38 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,115 +141,67 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-7</td>
+      <td class="bigbold">-6</td>
       <td>Cameron Smith -3
--3 thru 12</td>
+-3 thru 13</td>
       <td>Scottie Scheffler(W) -2
 -2 thru 10</td>
       <td>Sam Burns -1
 -1 thru 3</td>
-      <td>Corey Conners -1
--1 thru 6</td>
-      <td class="greyout leftborder">Xander Schauffele E
+      <td>Xander Schauffele E
 E thru 1</td>
-      <td class="greyout">Jordan Spieth E
+      <td class="greyout leftborder">Jordan Spieth E
 E thru 1</td>
+      <td class="greyout">Corey Conners E
+E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith -3
--3 thru 12</td>
+-3 thru 13</td>
       <td>Joaquin Niemann -2
 -2 thru 12</td>
       <td>Viktor Hovland E
 E thru 1</td>
       <td>Rory McIlroy E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Justin Thomas +2
-+2 thru 11</td>
-      <td class="greyout">Tommy Fleetwood(W) +4
-+4 thru 13</td>
++2 thru 12</td>
+      <td class="greyout">Tommy Fleetwood(W) +3
++3 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -3
--3 thru 12</td>
+-3 thru 13</td>
       <td>Shane Lowry -1
 -1 thru 14</td>
       <td>Matthew Fitzpatrick E
-Not started</td>
+E thru 1</td>
       <td>Brooks Koepka E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Will Zalatoris E
-E thru 1</td>
+E thru 2</td>
       <td class="greyout">Justin Thomas(W) +2
-+2 thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-4</td>
-      <td>Daniel Berger -2
--2 thru 13</td>
-      <td>Corey Conners(W) -1
--1 thru 6</td>
-      <td>Robert MacIntyre -1
--1 thru 8</td>
-      <td>Jon Rahm E
-E thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth E
-E thru 1</td>
-      <td class="greyout">Collin Morikawa +1
-+1 thru 2</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith(W) -3
--3 thru 12</td>
-      <td>Corey Conners -1
--1 thru 6</td>
-      <td>Viktor Hovland E
-E thru 1</td>
-      <td>Xander Schauffele E
-E thru 1</td>
-      <td class="greyout leftborder">Jordan Spieth E
-E thru 1</td>
-      <td class="greyout">Justin Thomas +2
-+2 thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-3</td>
-      <td>Tyrrell Hatton -1
--1 thru 3</td>
-      <td>Corey Conners -1
--1 thru 6</td>
-      <td>Shane Lowry -1
--1 thru 14</td>
-      <td>Jon Rahm E
-E thru 1</td>
-      <td class="greyout leftborder">Patrick Cantlay E
-E thru 1</td>
-      <td class="greyout">Justin Thomas(W) +2
-+2 thru 11</td>
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">-3</td>
       <td>Sungjae Im -3
--3 thru 4</td>
+-3 thru 5</td>
       <td>Viktor Hovland(W) E
 E thru 1</td>
       <td>Brooks Koepka E
-Not started</td>
-      <td>Patrick Cantlay E
 E thru 1</td>
+      <td>Patrick Cantlay E
+E thru 2</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 2</td>
       <td class="greyout">Justin Thomas +2
-+2 thru 11</td>
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -259,13 +211,13 @@ E thru 1</td>
       <td>Shane Lowry -1
 -1 thru 14</td>
       <td>Patrick Cantlay E
-E thru 1</td>
+E thru 2</td>
       <td>Will Zalatoris E
-E thru 1</td>
+E thru 2</td>
       <td class="greyout leftborder">Tony Finau E
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Justin Thomas(W) +2
-+2 thru 11</td>
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -275,29 +227,77 @@ E thru 10</td>
       <td>Shane Lowry -1
 -1 thru 14</td>
       <td>Jon Rahm E
-E thru 1</td>
+E thru 2</td>
       <td>Brooks Koepka E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Jordan Spieth E
 E thru 1</td>
       <td class="greyout">Will Zalatoris E
-E thru 1</td>
+E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -3
--3 thru 12</td>
+-3 thru 13</td>
       <td>Brooks Koepka E
-Not started</td>
+E thru 1</td>
       <td>Xander Schauffele E
 E thru 1</td>
       <td>Rory McIlroy E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Patrick Cantlay E
+E thru 2</td>
+      <td class="greyout">Collin Morikawa +1
++1 thru 2</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-3</td>
+      <td>Daniel Berger -2
+-2 thru 13</td>
+      <td>Robert MacIntyre -1
+-1 thru 8</td>
+      <td>Corey Conners(W) E
+E thru 7</td>
+      <td>Jon Rahm E
+E thru 2</td>
+      <td class="greyout leftborder">Jordan Spieth E
 E thru 1</td>
       <td class="greyout">Collin Morikawa +1
 +1 thru 2</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith(W) -3
+-3 thru 13</td>
+      <td>Corey Conners E
+E thru 7</td>
+      <td>Viktor Hovland E
+E thru 1</td>
+      <td>Xander Schauffele E
+E thru 1</td>
+      <td class="greyout leftborder">Jordan Spieth E
+E thru 1</td>
+      <td class="greyout">Justin Thomas +2
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-2</td>
+      <td>Tyrrell Hatton -1
+-1 thru 3</td>
+      <td>Shane Lowry -1
+-1 thru 14</td>
+      <td>Jon Rahm E
+E thru 2</td>
+      <td>Patrick Cantlay E
+E thru 2</td>
+      <td class="greyout leftborder">Corey Conners E
+E thru 7</td>
+      <td class="greyout">Justin Thomas(W) +2
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -305,77 +305,77 @@ E thru 1</td>
       <td>Daniel Berger -2
 -2 thru 13</td>
       <td>Brooks Koepka E
-Not started</td>
-      <td>Will Zalatoris E
 E thru 1</td>
+      <td>Will Zalatoris E
+E thru 2</td>
       <td>Tony Finau E
-E thru 10</td>
+E thru 11</td>
       <td class="greyout leftborder">Collin Morikawa +1
 +1 thru 2</td>
       <td class="greyout">Justin Thomas(W) +2
-+2 thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">-1</td>
-      <td>Dustin Johnson -1
--1 thru 2</td>
-      <td>Corey Conners -1
--1 thru 6</td>
-      <td>Xander Schauffele(W) E
-E thru 1</td>
-      <td>Russell Henley +1
-+1 thru 6</td>
-      <td class="greyout leftborder">Justin Thomas +2
-+2 thru 11</td>
-      <td class="greyout">Louis Oosthuizen +5
-+5 thru 12</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners -1
--1 thru 6</td>
-      <td>Jon Rahm E
-E thru 1</td>
-      <td>Xander Schauffele E
-E thru 1</td>
-      <td>Jordan Spieth E
-E thru 1</td>
-      <td class="greyout leftborder">Justin Thomas(W) +2
-+2 thru 11</td>
-      <td class="greyout">Louis Oosthuizen +5
-+5 thru 12</td>
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-1</td>
       <td>Dustin Johnson -1
--1 thru 2</td>
+-1 thru 3</td>
       <td>Jordan Spieth(W) E
 E thru 1</td>
       <td>Patrick Cantlay E
-E thru 1</td>
+E thru 2</td>
       <td>Viktor Hovland E
 E thru 1</td>
       <td class="greyout leftborder">Brooks Koepka E
-Not started</td>
-      <td class="greyout">Jon Rahm E
 E thru 1</td>
+      <td class="greyout">Jon Rahm E
+E thru 2</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">0</td>
+      <td>Dustin Johnson -1
+-1 thru 3</td>
+      <td>Xander Schauffele(W) E
+E thru 1</td>
+      <td>Corey Conners E
+E thru 7</td>
+      <td>Russell Henley +1
++1 thru 7</td>
+      <td class="greyout leftborder">Justin Thomas +2
++2 thru 12</td>
+      <td class="greyout">Louis Oosthuizen +5
++5 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Adam Ryan</td>
+      <td class="bigbold">0</td>
+      <td>Jon Rahm E
+E thru 2</td>
+      <td>Xander Schauffele E
+E thru 1</td>
+      <td>Jordan Spieth E
+E thru 1</td>
+      <td>Corey Conners E
+E thru 7</td>
+      <td class="greyout leftborder">Justin Thomas(W) +2
++2 thru 12</td>
+      <td class="greyout">Louis Oosthuizen +5
++5 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">0</td>
       <td>Jon Rahm(W) E
-E thru 1</td>
+E thru 2</td>
       <td>Jordan Spieth E
 E thru 1</td>
       <td>Patrick Cantlay E
-E thru 1</td>
+E thru 2</td>
       <td>Brooks Koepka E
-Not started</td>
+E thru 1</td>
       <td class="greyout leftborder">Tony Finau E
-E thru 10</td>
+E thru 11</td>
       <td class="greyout">Collin Morikawa +1
 +1 thru 2</td>
     </tr>
@@ -385,15 +385,15 @@ E thru 10</td>
       <td>Viktor Hovland(W) E
 E thru 1</td>
       <td>Jon Rahm E
-E thru 1</td>
+E thru 2</td>
       <td>Brooks Koepka E
-Not started</td>
+E thru 1</td>
       <td>Collin Morikawa +1
 +1 thru 2</td>
       <td class="greyout leftborder">Patrick Reed +1
 +1 thru 6</td>
-      <td class="greyout">Luke List +2
-+2 thru 15</td>
+      <td class="greyout">Luke List +3
++3 thru 16</td>
     </tr>
   </tbody>
 </table>
